@@ -640,6 +640,31 @@ if ($command_line)
 if (isset($_GET['xml']))
 	$upcontext['return_error'] = true;
 
+// These three checks are necessary to workaround an issue with the upgrade stucking when encountering a db error
+if (!isset($context))
+{
+	$context = Array();
+	$context['error'] = '';
+	if (!isset($txt['database_error']))
+		$txt['database_error'] = 'Database Error';
+}
+
+if (!function_exists('allowedTo'))
+{
+	function allowedTo($p,$b)
+	{
+		return true;
+	}
+}
+
+if (!function_exists('fatal_error'))
+{
+	function fatal_error($error,$log)
+	{
+		return ($error);
+	}
+}
+
 // Loop through all the steps doing each one as required.
 $upcontext['overall_percent'] = 0;
 foreach ($upcontext['steps'] as $num => $step)
@@ -2516,7 +2541,7 @@ function upgrade_query($string, $unbuffered = false)
 	// Get the query result - working around some SMF specific security - just this once!
 	$modSettings['disableQueryCheck'] = true;
 	$db_unbuffered = $unbuffered;
-	$result = $smcFunc['db_query']('', $string, 'security_override');
+	$result = $smcFunc['db_query']('', $string, Array('security_override'=>1,'db_error_skip'=>1));
 	$db_unbuffered = false;
 
 	// Failure?!
